Init Bootstrap config (narrower page), Jumbotron's content vertical alignment fixed

--- a/style.css
+++ b/style.css
@@ -54,6 +54,18 @@ h3 {
   background: -webkit-linear-gradient(#2d57a1 11.59%, #5cd8d0 100%);
   border-bottom: 1px solid #e0e0e0;
   color: white;
+  min-height: 100%;
+}
+
+@media (min-width:1200px) {
+    .jumbotron .container {
+        width: 1100px
+    }
+}
+
+.jumbotron .logo-and-title {
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .jumbotron h1 {
@@ -63,11 +75,6 @@ h3 {
 
 .jumbotron h1 span {
   font-size: 52px;
-}
-
-.jumbotron img {
-/*   box-shadow: 0px -3px 80px rgba(0,0,0,0.3); */
-/*   border-radius: 125px; */
 }
 
 .jumbotron img.hidden-xs {
@@ -111,14 +118,15 @@ h3 {
   display: block;
 }
 
-.jumbotron .row {
-  position: relative;
-}
-
 .jumbotron .hover-mid {
+  padding-top: 10%;
+  padding-bottom: 10%;
+/*
   position: absolute;
   top: 15%;
   right: 0px;
+*/
+
 }
 
 .jumbotron .links-are-below {
